Actualización de archivos: Readme, index, estilos y nuevos assets

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Profession is Personal Portfolio Template">
     <meta name="keywords" content="business, clean, contact form, corporate, cv, light, minimalist, modern, personal, personal profile, portfolio, resume, vcard, virtual card">
     <meta name="author" content="">
+    <link rel="icon" type="image/png" href="images/logo/Favicon 1.png">
 
     <!--[if lt IE 9]>
 	<script src="js/html5shiv.js"></script>
@@ -200,7 +201,7 @@
                             <div class="row">
                                 <div class="col-md-12 text-center">
                                     <h5><span class="id-color">Servicios</span></h5>
-                                    <h2>I'm Available For Hire</h2>
+                                    <h2>Listo para llevar tu idea al siguiente nivel</h2>
 
                                     <div id="carousel-3" class="sequence" data-anim="fadeInUp">
 
@@ -209,8 +210,8 @@
                                             <div class="inner">
                                                 <i class="icon_lightbulb_alt id-color"></i>
                                                 <div class="text">
-                                                    <h3>Design</h3>
-                                                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem.
+                                                    <h3>Diseño UI/UX</h3>
+                                                    Diseño de interfaces intuitivas y experiencias de usuario optimizadas para mejorar la interacción digital.
                                                 </div>
                                             </div>
                                         </div>
@@ -221,8 +222,8 @@
                                             <div class="inner">
                                                 <i class="icon_datareport id-color"></i>
                                                 <div class="text">
-                                                    <h3>Marketing</h3>
-                                                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem.
+                                                    <h3>Desarrollo Frontend</h3>
+                                                    Creación de interfaces web modernas y responsivas con tecnologías como HTML, CSS y JavaScript.
                                                 </div>
                                             </div>
                                         </div>
@@ -233,8 +234,8 @@
                                             <div class="inner">
                                                 <i class="icon_camera_alt id-color"></i>
                                                 <div class="text">
-                                                    <h3>Photography</h3>
-                                                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem.
+                                                    <h3>Desarrollo Backend</h3>
+                                                    Construcción de sistemas robustos y eficientes para gestionar la lógica y bases de datos de aplicaciones web.
                                                 </div>
                                             </div>
                                         </div>
@@ -245,8 +246,8 @@
                                             <div class="inner">
                                                 <i class="icon_tag_alt id-color"></i>
                                                 <div class="text">
-                                                    <h3>Branding</h3>
-                                                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem.
+                                                    <h3>Optimización Web</h3>
+                                                    Mejoras en el rendimiento, velocidad y accesibilidad para garantizar una experiencia de usuario fluida.
                                                 </div>
                                             </div>
                                         </div>
@@ -257,8 +258,8 @@
                                             <div class="inner">
                                                 <i class="icon_pencil-edit id-color"></i>
                                                 <div class="text">
-                                                    <h3>Development</h3>
-                                                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem.
+                                                    <h3>Manejo de Bases de Datos</h3>
+                                                    Gestión, estructuración y optimización de bases de datos SQL y NoSQL para proyectos escalables.
                                                 </div>
                                             </div>
                                         </div>
@@ -293,7 +294,7 @@
                     <div class="row">
 
                         <div class="col-md-12 text-center">
-                            <h5><span class="id-color">Portfolio</span></h5>
+                            <h5><span class="id-color">Portafolio</span></h5>
                             <h2>I Love What I Do</h2>
                         </div>
 
@@ -470,72 +471,6 @@
             <!-- section close -->
 
             <!-- section begin -->
-            <section id="section-testimonial">
-                <div class="container">
-
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <h5><span class="id-color">Testimonials</span></h5>
-                            <h2>What They Says</h2>
-                        </div>
-
-
-                        <div id="testimonial-carousel" class="de_carousel sequence" data-wow-delay=".3s">
-
-                            <div class="col-md-6 item sq-item wow">
-                                <div class="de_testi opt-2">
-                                    <blockquote>
-                                        <div class="de_testi_by">
-                                            <img src="images/people/1.jpg" class="img-circle" alt="">
-                                            <span>John, Pixar Studio</span>
-                                        </div>
-                                        <p>"Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore"</p>
-                                    </blockquote>
-                                </div>
-                            </div>
-
-                            <div class="col-md-6 item sq-item wow">
-                                <div class="de_testi opt-2">
-                                    <blockquote>
-                                        <div class="de_testi_by">
-                                            <img src="images/people/2.jpg" class="img-circle" alt="">
-                                            <span>Sarah, Microsoft</span>
-                                        </div>
-                                        <p>"Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore"</p>
-                                    </blockquote>
-                                </div>
-                            </div>
-
-                            <div class="col-md-6 item sq-item wow">
-                                <div class="de_testi opt-2">
-                                    <blockquote>
-                                        <div class="de_testi_by">
-                                            <img src="images/people/3.jpg" class="img-circle" alt="">
-                                            <span>Michael, Apple</span>
-                                        </div>
-                                        <p>"Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore"</p>
-                                    </blockquote>
-                                </div>
-                            </div>
-
-                            <div class="col-md-6 item sq-item wow">
-                                <div class="de_testi opt-2">
-                                    <blockquote>
-                                        <div class="de_testi_by">
-                                            <img src="images/people/4.jpg" class="img-circle" alt="">
-                                            <span>Thomas, Samsung</span>
-                                        </div>
-                                        <p>"Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore"</p>
-                                    </blockquote>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- section close -->
-
-            <!-- section begin -->
             <section id="section-fun-facts" class="pt60 pb60 text-light" data-bgcolor="#202020">
                 <div class="container">
 
@@ -623,14 +558,6 @@
 
                 </div>
             </section>
-
-            <!-- section begin -->
-            <section id="section-map" class="map-container no-top no-bottom" aria-label="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25214.351955908594!2d144.93916650352472!3d-37.81829399866787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb6899234e561db11!2sEnvato!5e0!3m2!1sen!2sid!4v1606280383060!5m2!1sen!2sid" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            </section>
-            <!-- section close -->
-
-
         </div>
         <!-- content close -->
 
